# Sentinelle

./: .gitignore  README.md  package-lock.json  pytorch_inv_vocab.pkl  pytorch_rnn_model.pth  pytorch_vocab.pkl  render.yaml
backend/: .env  .gitignore  README.md  app.py  issue.py  pyproject.toml  requirements.txt  train_rnn_pytorch.py
frontend/: app.css  app.js  index.html  try.html
