[project]
name = "sentinelle-backend"
version = "0.1.0"
description = "AI-powered scam detection"
authors = [
    {name = "Davozay",email = "doayozie@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "flask",
    "requests",
    "beautifulsoup4",
    "tldextract",
    "python-dotenv"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
